tests/ui/issues/issue-53251.stderr
error[E0107]: associated function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/issue-53251.rs:11:20
   |
LL |                 S::f::<i64>();
   |                    ^ expected 0 generic arguments
...
LL | impl_add!(a b);
   | -------------- in this macro invocation
   |
note: associated function defined here, with 0 generic parameters
  --> $DIR/issue-53251.rs:4:8
   |
LL |     fn f() {}
   |        ^
   = note: this error originates in the macro `impl_add` (in Nightly builds, run with -Z macro-backtrace for more info)
help: remove the unnecessary generics
   |
LL -                 S::f::<i64>();
LL +                 S::f();
   |

error[E0107]: associated function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/issue-53251.rs:11:20
   |
LL |                 S::f::<i64>();
   |                    ^ expected 0 generic arguments
...
LL | impl_add!(a b);
   | -------------- in this macro invocation
   |
note: associated function defined here, with 0 generic parameters
  --> $DIR/issue-53251.rs:4:8
   |
LL |     fn f() {}
   |        ^
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
   = note: this error originates in the macro `impl_add` (in Nightly builds, run with -Z macro-backtrace for more info)
help: remove the unnecessary generics
   |
LL -                 S::f::<i64>();
LL +                 S::f();
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
